<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<package format="3">
  <name>blob</name>
  <version>0.1.0</version>
  <description>Provides a new message type blob/Blob for binary data.</description>

  <license>BSD</license>

  <url type="website">https://github.com/CodeFinder2/blob_tools</url>
  <author email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</author>
  <maintainer email="adrian.boeckenkamp@tu-dortmund.de">Adrian Böckenkamp</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <depend>bzip2</depend>
  <depend>roscpp</depend>

  <exec_depend>message_runtime</exec_depend>

  <export></export>
</package>
